--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -6,6 +6,7 @@
     margin-left: 2px;
     background-color:black;
     padding: 30px;
+  
      
     
 }
@@ -18,3 +19,7 @@
 nav a:hover{
     background-color:tan;
 } 
+.find{
+    width:100px;
+    height: 100px;
+}
